# rust-workshop

./: .gitignore  README.md  deploy-app.sh  deploy-infra.sh  deploy.sh  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
cli/: Cargo.toml  README.md  on-my-own-1.md  on-my-own-2.md  on-my-own-3.md  on-my-own-4.md  on-my-own-5.md  step-by-step-1.md  step-by-step-2.md  step-by-step-3.md  step-by-step-4.md  step-by-step-5.md
cli/src/: api.rs  main.rs
cli/src/api/: model.rs
docs/command-line-tutorial/: README.md
docs/introduction/: 01-why-should-you-learn-rust.md  02-learning-the-basics-of-rust.md  03-memory-management-in-rust.md  04-pattern-matching.md  05-working-with-structs-and-traits.md
docs/rest-api-tutorial/: README.md
iac/: container-app.bicep  container-registry.bicep  log-analytics.bicep  main.bicep  main.parameters.json  postgres.bicep  todo-api.bicep  todo-api.parameters.json
rest-api/: .env  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
rest-api/sql/: 00-create-tasks-table.sql  01-create-users-table.sql
rest-api/src/: auth.rs  config.rs  configuration.rs  database.rs  db.rs  endpoints.rs  entity.rs  error.rs  errors.rs  lib.rs  main.rs  requests.rs  responses.rs  state.rs  web.rs
rest-api/tests/: basic_tests.http  integration_test.rs
sql/: 00-create-db.sql
tests/: create-todo.http  list-todos.http  register-account.http  update-todo.http
