[package]
name = "task"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hierarchical or layered configurations for Rust applications
config = "0.14.0"

# Provides functionality needed to do correct operations on dates and times
chrono = { version = "0.4.38", features = ["serde"] }

# Command Line Argument Parser for Rust
clap = { version = "4.5.15", features = ["derive"] }

# Lightweight logging facade.
log = "0.4.22"

# Logging facilities that can be easily combined.
simplelog = "0.12.2"

# A convenient, higher-level HTTP Client.
reqwest = { version = "0.12.6", features = ["blocking", "json"] }
