[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json", "tokio"] }
config = { version = "0.14.0", features = ["toml"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "runtime-tokio-rustls"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
testcontainers-modules = { version = "0.5.0", features = ["postgres", "blocking"] }